hphp/test/zend/good/ext/exif/tests/exif_imagetype_error.php.skipif
<?php if (!extension_loaded('exif')) print 'skip exif extension not available';?>