hphp/test/zend/bad/ext/mysqli/tests/mysqli_embedded_connect.php.skipif
<?php
require_once('skipif.inc');
require_once('skipifnotemb.inc');
require_once('skipifconnectfailure.inc');
?>